# jupyter-book-tuto

./: .buildinfo  README.md  altair-intro.html  genindex.html  intro.html  pyproject.toml  search.html  searchindex.js
_sources/: intro.md
myfirstbook/: _toc.yml  altair-intro.ipynb  intro.md
myfirstbook/_build/.doctrees/: altair-intro.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
myfirstbook/_build/html/: altair-intro.html  genindex.html  intro.html  search.html  searchindex.js
myfirstbook/_build/html/_sources/: altair-intro.ipynb  intro.md
myfirstbook/_build/jupyter_execute/: altair-intro.ipynb  markdown-notebooks.ipynb
